// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundBlendMode renders 0 1`] = `
Array [
  .c0 {
  background-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders function 1`] = `
Array [
  .c0 {
  background-blend-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders invalid theme path 1`] = `
Array [
  .c0 {
  background-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders negative number 1`] = `
Array [
  .c0 {
  background-blend-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  background-blend-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-blend-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-blend-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-blend-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-blend-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  background-blend-mode: July;
}

@media May {
  .c0 {
    background-blend-mode: August;
  }
}

@media April {
  .c0 {
    background-blend-mode: September;
  }
}

@media January {
  .c0 {
    background-blend-mode: November;
  }
}

@media April {
  .c0 {
    background-blend-mode: August;
  }
}

@media June {
  .c0 {
    background-blend-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: July;
}

@media May {
  .c0 {
    background-blend-mode: August;
  }
}

@media April {
  .c0 {
    background-blend-mode: September;
  }
}

@media January {
  .c0 {
    background-blend-mode: November;
  }
}

@media April {
  .c0 {
    background-blend-mode: August;
  }
}

@media June {
  .c0 {
    background-blend-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-blend-mode: November;
  }
}

@media April {
  .c0 {
    background-blend-mode: January;
  }
}

@media January {
  .c0 {
    background-blend-mode: December;
  }
}

@media April {
  .c0 {
    background-blend-mode: April;
  }
}

@media June {
  .c0 {
    background-blend-mode: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-blend-mode: November;
  }
}

@media April {
  .c0 {
    background-blend-mode: January;
  }
}

@media January {
  .c0 {
    background-blend-mode: December;
  }
}

@media April {
  .c0 {
    background-blend-mode: April;
  }
}

@media June {
  .c0 {
    background-blend-mode: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    background-blend-mode: July;
  }
}

@media April {
  .c0 {
    background-blend-mode: August;
  }
}

@media January {
  .c0 {
    background-blend-mode: September;
  }
}

@media April {
  .c0 {
    background-blend-mode: November;
  }
}

@media June {
  .c0 {
    background-blend-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-blend-mode: July;
  }
}

@media April {
  .c0 {
    background-blend-mode: August;
  }
}

@media January {
  .c0 {
    background-blend-mode: September;
  }
}

@media April {
  .c0 {
    background-blend-mode: November;
  }
}

@media June {
  .c0 {
    background-blend-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-blend-mode: January;
  }
}

@media April {
  .c0 {
    background-blend-mode: December;
  }
}

@media January {
  .c0 {
    background-blend-mode: April;
  }
}

@media April {
  .c0 {
    background-blend-mode: May;
  }
}

@media June {
  .c0 {
    background-blend-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-blend-mode: January;
  }
}

@media April {
  .c0 {
    background-blend-mode: December;
  }
}

@media January {
  .c0 {
    background-blend-mode: April;
  }
}

@media April {
  .c0 {
    background-blend-mode: May;
  }
}

@media June {
  .c0 {
    background-blend-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders postitive number 1`] = `
Array [
  .c0 {
  background-blend-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders string 1`] = `
Array [
  .c0 {
  background-blend-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBlendMode renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`backgroundBlendMode renders valid theme path 1`] = `
Array [
  .c0 {
  background-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-blend-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
